--- a/docs/examples/azcausal.ipynb
+++ b/docs/examples/azcausal.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "linear_trend = Trend(degree=1, coefficient=0.05)\n",
     "data = linear_trend(simulate(cfg))\n",
-    "plot(data)"
+    "ax = plot(data)"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "TRUE_EFFECT = 0.05\n",
     "effect = StaticEffect(effect=TRUE_EFFECT)\n",
     "inflated_data = effect(data)\n",
-    "plot(inflated_data)"
+    "ax = plot(inflated_data)"
    ]
   },
   {
@@ -121,14 +121,18 @@
     "in effort to fully stress-test any new model and identify its limitations.\n",
     "\n",
     "To achieve this, we'll simulate 10 control units, 60 pre-intervention time points, and\n",
-    "30 post-intervention time points according to the following process: $$ \\begin{align}\n",
+    "30 post-intervention time points according to the following process: \n",
+    "\n",
+    "$$ \\begin{align}\n",
     "\\mu_{n, t} & \\sim\\mathcal{N}(20, 0.5^2)\\\\\n",
     "\\alpha_{n} & \\sim \\mathcal{N}(0, 1^2)\\\\\n",
     "\\beta_{n} & \\sim \\mathcal{N}(0.05, 0.01^2)\\\\\n",
     "\\nu_n & \\sim \\mathcal{N}(1, 1^2)\\\\\n",
     "\\gamma_n & \\sim \\operatorname{Student-t}_{10}(1, 1^2)\\\\\n",
     "\\mathbf{Y}_{n, t} & = \\mu_{n, t} + \\alpha_{n} + \\beta_{n}t + \\nu_n\\sin\\left(3\\times\n",
-    "2\\pi t + \\gamma\\right) + \\delta_{t, n} \\end{align} $$ where the true treatment effect\n",
+    "2\\pi t + \\gamma\\right) + \\delta_{t, n} \\end{align} $$ \n",
+    "\n",
+    "where the true treatment effect\n",
     "$\\delta_{t, n}$ is 5% when $n=1$ and $t\\geq 60$ and 0 otherwise. Meanwhile,\n",
     "$\\mathbf{Y}$ is the matrix of observations, long in the number of time points and wide\n",
     "in the number of units."
@@ -159,7 +163,7 @@
     "periodic = Periodic(amplitude=amplitude, shift=shift, frequency=3)\n",
     "\n",
     "data = effect(periodic(linear_trend(simulate(cfg))))\n",
-    "plot(data)"
+    "ax = plot(data)"
    ]
   },
   {
@@ -193,6 +197,9 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
