--- a/docs/examples/placebo_test.ipynb
+++ b/docs/examples/placebo_test.ipynb
@@ -73,7 +73,7 @@
     "TRUE_EFFECT = 0.05\n",
     "effect = StaticEffect(effect=TRUE_EFFECT)\n",
     "data = effect(simulate(cfg))\n",
-    "plot(data)"
+    "ax = plot(data)"
    ]
   },
   {
