--- a/docs/examples/basic.ipynb
+++ b/docs/examples/basic.ipynb
@@ -113,7 +113,7 @@
     "        global_scale=s,\n",
     "    )\n",
     "    data = simulate(cfg)\n",
-    "    ax = plot(data, ax=ax, title=f\"Mean: {m}, Scale: {s}\")"
+    "    _ = plot(data, ax=ax, title=f\"Mean: {m}, Scale: {s}\")"
    ]
   },
   {
@@ -162,7 +162,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(10, 3))\n",
     "for ax in axes:\n",
     "    data = simulate(cfg)\n",
-    "    ax = plot(data, ax=ax)"
+    "    _ = plot(data, ax=ax)"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(10, 3))\n",
     "for ax in axes:\n",
     "    data = simulate(cfg, key=rng)\n",
-    "    ax = plot(data, ax=ax)"
+    "    _ = plot(data, ax=ax)"
    ]
   },
   {
