--- a/docs/examples/basic.ipynb
+++ b/docs/examples/basic.ipynb
@@ -77,7 +77,7 @@
     ")\n",
     "\n",
     "data = simulate(cfg)\n",
-    "plot(data)"
+    "ax = plot(data)"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "        global_scale=s,\n",
     "    )\n",
     "    data = simulate(cfg)\n",
-    "    plot(data, ax=ax, title=f\"Mean: {m}, Scale: {s}\")"
+    "    _ = plot(data, ax=ax, title=f\"Mean: {m}, Scale: {s}\")"
    ]
   },
   {
@@ -162,7 +162,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(10, 3))\n",
     "for ax in axes:\n",
     "    data = simulate(cfg)\n",
-    "    plot(data, ax=ax)"
+    "    _ = plot(data, ax=ax)"
    ]
   },
   {
@@ -180,13 +180,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "rng = np.random.RandomState(42)\n",
     "\n",
     "fig, axes = plt.subplots(ncols=2, figsize=(10, 3))\n",
     "for ax in axes:\n",
     "    data = simulate(cfg, key=rng)\n",
-    "    plot(data, ax=ax)"
+    "    _ = plot(data, ax=ax)"
    ]
   },
   {
@@ -213,8 +212,8 @@
     "effect = StaticEffect(effect=0.02)\n",
     "inflated_data = effect(data)\n",
     "fig, (ax0, ax1) = plt.subplots(ncols=2, figsize=(10, 3))\n",
-    "plot(data, ax=ax0, title=\"Original data\")\n",
-    "plot(inflated_data, ax=ax1, title=\"Inflated data\")"
+    "ax0 = plot(data, ax=ax0, title=\"Original data\")\n",
+    "ax1 = plot(inflated_data, ax=ax1, title=\"Inflated data\")"
    ]
   },
   {
@@ -238,7 +237,7 @@
    "source": [
     "trend_term = Trend(degree=1, coefficient=0.1)\n",
     "data_with_trend = effect(trend_term(data))\n",
-    "plot(data_with_trend)"
+    "ax = plot(data_with_trend)"
    ]
   },
   {
@@ -250,7 +249,7 @@
    "source": [
     "trend_term = Trend(degree=2, coefficient=0.0025)\n",
     "data_with_trend = effect(trend_term(data))\n",
-    "plot(data_with_trend)"
+    "ax = plot(data_with_trend)"
    ]
   },
   {
@@ -270,7 +269,7 @@
    "source": [
     "periodicity = Periodic(amplitude=2, frequency=6)\n",
     "perioidic_data = effect(periodicity(trend_term(data)))\n",
-    "plot(perioidic_data)"
+    "ax = plot(perioidic_data)"
    ]
   },
   {
@@ -292,7 +291,7 @@
     "intercept = UnitVaryingParameter(sampling_dist=sampling_dist)\n",
     "trend_term = Trend(degree=1, intercept=intercept, coefficient=0.1)\n",
     "data_with_trend = effect(trend_term(data))\n",
-    "plot(data_with_trend)"
+    "ax = plot(data_with_trend)"
    ]
   },
   {
@@ -306,7 +305,7 @@
     "frequency = UnitVaryingParameter(sampling_dist=sampling_dist)\n",
     "\n",
     "p = Periodic(frequency=frequency)\n",
-    "plot(p(data))"
+    "ax = plot(p(data))"
    ]
   },
   {
@@ -322,7 +321,7 @@
     "variation. In a follow-up notebook, we show how these datasets may be integrated with\n",
     "Amazon's own AZCausal library to compare the effect estimated by a model with the true\n",
     "effect of the underlying data generating process. A link to this notebook is\n",
-    "[here](https://github.com/amazon-science/causal-validation/blob/main/examples/azcausal.pct.py)."
+    "[here](http://localhost:9998/causal-validation/examples/azcausal/)."
    ]
   }
  ],
@@ -331,6 +330,9 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
