--- a/docs/examples/azcausal.ipynb
+++ b/docs/examples/azcausal.ipynb
@@ -116,7 +116,7 @@
     "title": "We see that SDID has done an excellent job of estimating the treatment"
    },
    "source": [
-    "effect.  However, given the simplicity of the data, this is not surprising. With the\n",
+    "We see that SDID has done an excellent job of estimating the treatment effect.  However, given the simplicity of the data, this is not surprising. With the\n",
     "functionality within this package though we can easily construct more complex datasets\n",
     "in effort to fully stress-test any new model and identify its limitations.\n",
     "\n",
