This PR adds support for multiple datasets to be passed to the `PlaceboTesting` object.

--- a/docs/examples/placebo_test.ipynb
+++ b/docs/examples/placebo_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51633494",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Placebo Testing\n",
@@ -26,27 +26,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2accff55",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from azcausal.core.error import JackKnife\n",
     "from azcausal.estimators.panel.did import DID\n",
     "from azcausal.estimators.panel.sdid import SDID\n",
+    "from scipy.stats import norm\n",
     "\n",
     "from causal_validation import (\n",
     "    Config,\n",
     "    simulate,\n",
     ")\n",
+    "from causal_validation.data import DatasetContainer\n",
     "from causal_validation.effects import StaticEffect\n",
     "from causal_validation.models import AZCausalWrapper\n",
     "from causal_validation.plotters import plot\n",
-    "from causal_validation.validation.placebo import PlaceboTest"
+    "from causal_validation.transforms import Trend\n",
+    "from causal_validation.validation.placebo import PlaceboTest\n",
+    "from causal_validation.transforms.parameter import UnitVaryingParameter"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5e54868a",
+   "id": "2",
    "metadata": {},
    "source": [
     "## Data simulation\n",
@@ -59,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70384164",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da2cfe08",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -92,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e8b3ef5",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f972d2",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Placebo Test Results\n",
@@ -122,17 +126,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b5671b4",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = PlaceboTest(model, data).execute()\n",
+    "result = PlaceboTest(model, datasets=data).execute()\n",
     "result.summary()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1109724d",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Model Comparison\n",
@@ -140,18 +144,68 @@
     "We can also use the results of a placebo test to compare two or more models. Using\n",
     "`causal-validation`, this is as simple as supplying a series of models to the placebo\n",
     "test and comparing their outputs. To demonstrate this, we will compare the previously\n",
-    "used synthetic difference-in-differences model with regular difference-in-differences."
+    "used synthetic difference-in-differences model with regular difference-in-differences. In the previous placebo test you'll notice that the dataset in use was named `\"Dataset 0\"`. We can set the `name` property of our `Dataset` to more cleanly log the name of the data under consideration."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d26c1b",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.name = \"Simple\"\n",
     "did_model = AZCausalWrapper(model=DID())\n",
     "PlaceboTest([model, did_model], data).execute().summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "Sometimes, we may wish to compare multiple models across multiple datasets. Fortunately, this is as simple as providing the datasets as a list to `PlaceboTest`, much like the models we supplied in the previous cell. From here, `causal-validation` will go and conduct a placebo test for each pair of model and dataset. To see this, let us now synthesis a more complex dataset where the intercept and slope of each control unit vary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg2 = Config(\n",
+    "    n_control_units=10,\n",
+    "    n_pre_intervention_timepoints=60,\n",
+    "    n_post_intervention_timepoints=30,\n",
+    "    seed=42,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "effect = StaticEffect(effect=TRUE_EFFECT)\n",
+    "intercept = UnitVaryingParameter(sampling_dist=norm(0.0, 1.0))\n",
+    "slope = UnitVaryingParameter(sampling_dist=norm(0.2, 0.05))\n",
+    "trend = Trend(degree=1, coefficient=slope, intercept=intercept)\n",
+    "complex_data = effect(trend(simulate(cfg2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "By default, the data will be named according to the index it was supplied, as seen in previous cells. However, it can be named by wrapping the datasets up in a `DatasetContainer` object and supplying the datasets' names as a list of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = DatasetContainer([data, complex_data], names=[\"Simple\", \"Complex\"])\n",
+    "PlaceboTest([model, did_model], datasets).execute().summary()"
    ]
   }
  ],
@@ -164,6 +218,18 @@
    "display_name": "dev",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
