Small doc fixes

--- a/docs/examples/basic.ipynb
+++ b/docs/examples/basic.ipynb
@@ -54,11 +54,9 @@
   {
    "cell_type": "markdown",
    "id": "3",
-   "metadata": {
-    "title": "Simulating a dataset is as simple as specifying a `Config` object and"
-   },
+   "metadata": {},
    "source": [
-    "then invoking the `simulate` function. Once simulated, we may visualise the data\n",
+    "Simulating a dataset is as simple as specifying a `Config` object and then invoking the `simulate` function. Once simulated, we may visualise the data\n",
     "through the `plot` function."
    ]
   },
@@ -321,7 +319,7 @@
     "variation. In a follow-up notebook, we show how these datasets may be integrated with\n",
     "Amazon's own AZCausal library to compare the effect estimated by a model with the true\n",
     "effect of the underlying data generating process. A link to this notebook is\n",
-    "[here](http://localhost:9998/causal-validation/examples/azcausal/)."
+    "[here](https://amazon-science.github.io/causal-validation/examples/azcausal/)."
    ]
   }
  ],
