--- a/docs/examples/azcausal.ipynb
+++ b/docs/examples/azcausal.ipynb
@@ -169,11 +169,9 @@
   {
    "cell_type": "markdown",
    "id": "9",
-   "metadata": {
-    "title": "As before, we may now go about estimating the treatment. However, this"
-   },
+   "metadata": {},
    "source": [
-    "time we see that the delta between the estaimted and true effect is much larger than\n",
+    "As before, we may now go about estimating the treatment. However, this time we see that the delta between the estimated and true effect is much larger than\n",
     "before."
    ]
   },
